--- a/splitit/package.json
+++ b/splitit/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    
+    "@rainbow-me/rainbowkit": "^0.8.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "ethers": "^5.7.2",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "wagmi": "^0.8.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
